Fixed CTA Mobile wrapping

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -484,6 +484,8 @@ ul{
 
   .cta a {
     font-size: 14px;
+    min-width: 155px;        
+    white-space: nowrap;
   }
 
   /* SPACING */
